<resources>
    <string name="app_name">Faer</string>


    <string name="facebook_app_id">212054459401622</string>


    <!-- ##Settings View -->
    <string name="settings">Settings</string>
    <string name="shop">Shop</string>
    <string name="shop_women">Shop Women</string>
    <string name="shop_men">Shop Men</string>
    <string name="preferred_currency">Preferred Currency</string>

    <string name="eur">EUR</string>
    <string name="usd">USD</string>
    <string name="gbp">GBP</string>
    <string name="dkk">DKK</string>

    <string name="faer_email">hello@wearefaer.com</string>


    <string name="about">About</string>
    <string name="about_text">Visit wearefaer.com for more details.</string>

    <string name="feedback">Tap here to send feedback.</string>

    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="text_search_base_url">https://api.cerebel.io/v3/store/faer/search/text</string>
    <string name="image_search_base_url">https://api.cerebel.io/v3/store/faer/search/image</string>

    <string name="user_api_base_url">https://api.cerebel.io/v3/store/faer/user</string>

    <string name="cerebel_api_token">AonNLZaEXMtLiHdqJqqGQjKrVRGMhq</string>


    <!-- ##Search View -->


    <!-- ##Search View -->

    <!-- ##Extras Keys -->

    <!-- ##Extras Keys -->


    <!-- ##Preferences View -->

    <string name="currencyDetails">Prices not in your preferred currency are converted automatically at current exchange rates.</string>
    <string name="genderSettings">genderSettings</string>
    <string name="currencySettings">currencySettings</string>
    <string name="pushNotificationsEnabled">pushNotificationsEnabled</string>
    <string name="appInstanceID">appInstanceID</string>
    <string name="firstMicrophoneSessionFragment">firstMicrophoneSessionFragment</string>
    <string name="firstCameraSessionFragment">firstCameraSessionFragment</string>
    <string name="shoppingMen">men</string>
    <string name="shoppingWomen">women</string>
    <string name="shoppingInEur">eur</string>
    <string name="shoppingInUsd">usd</string>
    <string name="shoppingInGbp">gbp</string>
    <string name="shoppingInDkk">dkk</string>

    <!-- ##Preferences View -->

    <string name="nearStoresKey">nearStores</string>
    <string name="centerLat">centerLat</string>
    <string name="centerLon">centerLon</string>


    <!-- ##Feed View -->

    <string name="freshLooks">Fresh Looks</string>


    <!-- ##Feed View -->

    <!-- ##Favorite View -->

    <string name="wishlist_title">Your Wishlist️</string>
    <string name="wishlist_description">Like products in Fresh Looks or Search to add them here.</string>
    <string name="turn_on_sale_notifications">Turn on sale notifications.</string>

    <!-- ##Favorite View -->

    <!-- ##Query Results View -->


    <string name="photo_error">Sorry, we couldn\'t find any products similar to your photo.️</string>
    <string name="text_error">Sorry, your search \"%1$s\" didn\'t match any products.️</string>
    <string name="query_no_results">Sorry, we couldn\'t find any products that match your search.️</string>

    <!-- ##Query Results View -->


    <!-- ##Analytics -->

    <!-- ##Analytics -->


    <!-- ##Fonts -->

    <string name="font_medium">fonts/Montserrat-Medium.ttf</string>
    <string name="font_bold">fonts/Montserrat-Bold.ttf</string>
    <string name="font_extra_bold">fonts/Montserrat-ExtraBold.ttf</string>
    <string name="font_open_sans">fonts/OpenSans-Regular.ttf</string>

    <!-- ##Fonts -->


    <!-- ##Shared Preferences -->

    <string name="first_session">firstSession</string>

    <string name="nps_first_text">Our community is very important to us, so we\'d love to know what you think about Faer.\n\nYour participation in this survey will help us improve your experience. It will only take 3 minutes.</string>
    <string name="nps_second_title">How likely is it that you would recommend Faer to a friend or colleague?</string>
    <string name="nps_third_title">Thank you. Care to tell us why?</string>
    <string name="nps_fourth_title">Thanks for sharing your thoughts with us.</string>
    <string name="nps_fourth_text">Leave your email to stay in the loop about Faer.</string>
    <string-array name="nps_options">
        <item>Please choose an option</item>
        <item>0 - Not likely</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10 - Very likely</item>
    </string-array>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="visit_shop">Visit Website</string>
    <string name="brand">Brand</string>
    <string name="category">Category</string>
    <string name="no_internet_connection1">Oh, no Internet connection</string>
    <string name="no_internet_connection2">Pull to refresh when you\'re back online</string>

    <string name="rta_dialog_title">Enjoying Faer?</string>
    <string name="rta_dialog_message">Take a moment to rate us on the Google Play Store. Your support is much appreciated!</string>
    <string name="rta_dialog_ok">Rate now</string>
    <string name="rta_dialog_cancel">Later</string>
    <string name="rta_dialog_no">No, thanks</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_shops_nearby">ShopsNearbyActivity</string>


</resources>
