<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridView
        android:id="@+id/feed_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGridBackground"
        android:numColumns="1"/>


    <LinearLayout
        android:id="@+id/wishlist_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_heart" />

        <TextView
            android:id="@+id/wishlist_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/wishlist_title"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/wishlist_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:text="@string/wishlist_description"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/turn_on_sale_notifications_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:visibility="gone"
            android:layout_marginTop="22dp"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:text="@string/turn_on_sale_notifications"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />


    </LinearLayout>


</RelativeLayout>